style(Maps): ensure equal spacing between items

--- a/src/components/Pages/Maps/MapCard2/MapCard2.module.scss
+++ b/src/components/Pages/Maps/MapCard2/MapCard2.module.scss
@@ -21,7 +21,6 @@
   .mapCard {
     flex-direction: column;
     gap: 24px;
-    padding: 14px 12px;
   }
 }
 
