--- a/src/components/Shared/Loaders/SkeletonLoaders/SkeletonMapList/SkeletonMapList.module.scss
+++ b/src/components/Shared/Loaders/SkeletonLoaders/SkeletonMapList/SkeletonMapList.module.scss
@@ -21,7 +21,6 @@
   .map {
     flex-direction: column;
     gap: 24px;
-    padding: 14px 12px;
   }
 }
 
